<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.apps.mohb.wifiauthority.MainActivity">

    <item
        android:id="@+id/action_map"
        android:orderInCategory="1"
        android:title="@string/menu_map"
        android:icon="@drawable/ic_map_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_main_settings"
        android:orderInCategory="2"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="3"
        android:title="@string/menu_help"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="4"
        android:title="@string/menu_about"
        app:showAsAction="never" />

</menu>
