<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:text="@string/dialog_add_network_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_margin"
        android:layout_marginLeft="@dimen/dialog_text_margin"
        android:id="@+id/txtAddNetDescription" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dialog_margin"
        android:layout_marginRight="@dimen/dialog_margin"
        android:id="@+id/txtDescription"
        android:inputType="text" />

    <TextView
        android:text="@string/dialog_add_network_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_margin"
        android:layout_marginLeft="@dimen/dialog_text_margin"
        android:id="@+id/txtAddNetSSID" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dialog_margin"
        android:layout_marginRight="@dimen/dialog_margin"
        android:id="@+id/txtSSID"
        android:inputType="text" />

    <TextView
        android:text="@string/dialog_add_network_security"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_margin"
        android:layout_marginLeft="@dimen/dialog_text_margin"
        android:id="@+id/txtAddNetSecurity" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_spin_margin"
        android:layout_marginLeft="@dimen/dialog_widget_margin"
        android:layout_marginRight="@dimen/dialog_margin"
        android:id="@+id/spinSecurity" />

    <TextView
        android:text="@string/dialog_add_network_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_margin"
        android:layout_marginLeft="@dimen/dialog_text_margin"
        android:id="@+id/txtAddNetPasswd" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dialog_margin"
        android:layout_marginRight="@dimen/dialog_margin"
        android:inputType="textPassword"
        android:id="@+id/txtPassword" />

    <CheckBox
        android:text="@string/dialog_check_show_passwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dialog_widget_margin"
        android:layout_marginRight="@dimen/dialog_margin"
        android:layout_marginBottom="@dimen/dialog_margin"
        android:id="@+id/checkPasswd" />

</LinearLayout>